--- a/RegistrationAndLoginWebsite/Views/Shared/_Layout.cshtml
+++ b/RegistrationAndLoginWebsite/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿
+
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -34,7 +39,25 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            <li class="nav-item  ml-auto">
+                                <a class="nav-link text-dark" asp-area="Account" asp-controller="Account" asp-action="Register">@User.Identity.Name</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item  ml-auto">
+                                <a class="nav-link text-dark" asp-area="Account" asp-controller="Account" asp-action="Register">Register</a>
+                            </li>
+                        }
                     </ul>
+                    @*<ul class="navbar-nav">
+                        <li class="nav-item  ml-auto">
+                            <a class="nav-link text-dark" asp-area="Account" asp-controller="Account" asp-action="Register">Register</a>
+                        </li>
+                    </ul>*@
                 </div>
             </div>
         </nav>
