Extended IdentityUser Class

--- a/RegistrationAndLoginWebsite/Areas/Account/Views/Account/Register.cshtml
+++ b/RegistrationAndLoginWebsite/Areas/Account/Views/Account/Register.cshtml
@@ -21,6 +21,12 @@
                 </div>
             </div>
             <div class="form-group row">
+                <label class="col-md-2 col-sm-2 col-form-label">Current City</label>
+                <div class="col-md-10 col-sm-10">
+                    <input type="text" class="form-control" name="city" id="city" placeholder="    please enter your current city "/>
+                </div>
+            </div>
+            <div class="form-group row">
                 <label class="col-md-2 col-sm-2 col-form-label">Password</label>
                 <div class="col-md-10 col-sm-10">
                     <input type="password" class="form-control" name="password" id="password" placeholder="    please enter your password "/>
