--- a/RegistrationAndLoginWebsite/Views/Shared/_Layout.cshtml
+++ b/RegistrationAndLoginWebsite/Views/Shared/_Layout.cshtml
@@ -1,7 +1,8 @@
 ﻿
 
 @using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
+@using RegistrationAndLoginWebsite.Data.Entity
+@inject SignInManager<ApplicationUser> SignInManager
 
 <!DOCTYPE html>
 <html>
