--- a/RegistrationAndLoginWebsite/Areas/Account/Views/Account/Register.cshtml
+++ b/RegistrationAndLoginWebsite/Areas/Account/Views/Account/Register.cshtml
@@ -11,7 +11,7 @@
 <form asp-are="Account" asp-controller="Account" asp-action="Register" method="post">
     <div class="card">
         <div class="card-header">
-            <h4><b>Create a New Account</b></h4>
+            <h4><b>Create New Account</b></h4>
         </div>
         <div class="card-body">
             <div class="form-group row">
