--- a/RegistrationAndLoginWebsite/Views/Shared/_Layout.cshtml
+++ b/RegistrationAndLoginWebsite/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                         @if (SignInManager.IsSignedIn(User))
                         {
                             <li class="nav-item  ml-auto">
+                                <a class="nav-link text-dark" asp-area="Account" asp-controller="Roles" asp-action="CreateRole">Role</a>
+                            </li>
+                            <li class="nav-item  ml-auto">
                                 <a class="nav-link text-dark" asp-area="Account" asp-controller="Account" asp-action="Register">@User.Identity.Name</a>
                             </li>
                         }
